--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "pmartinez1085-hello-world-package": "^1.0.0"
   },
   "devDependencies": {
+    "laravel-elixir-browsersync-official": "^1.0.0",
     "laravel-elixir-webpack-official": "^1.0.8"
   },
   "scripts": {
